# comicvid

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pypi-publish.yml
src/comicvid/: __init__.py  audio.py  cli.py  pipeline.py  render.py  subtitle.py  types.py
tests/: test_audio.py  test_cli.py  test_pipeline.py  test_pipeline_e2e.py  test_render.py  test_subtitle.py
