[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "comicvid"
version = "0.1.0"
description = "Static images to animated video — Ken Burns zoom + ASS subtitles + audio sync"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "comicvid contributors"},
]
keywords = ["video", "slideshow", "ken-burns", "subtitles", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video :: Conversion",
    "Topic :: Utilities",
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
]

[project.urls]
Homepage = "https://github.com/chfr19820610-cell/comicvid"
Repository = "https://github.com/chfr19820610-cell/comicvid.git"

[project.scripts]
comicvid = "comicvid.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]
include = ["comicvid*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.coverage.run]
source = ["comicvid"]
omit = ["*/tests/*"]

[tool.coverage.report]
fail_under = 80
